--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="~{fragments :: head}"></head>
+<head th:replace="fragments :: head"></head>
 
 <body>
 
-<div th:replace="~{fragments :: page-header}"></div>
+<div th:replace="fragments :: page-header"></div>
 
 <div class="container body-content">
   <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
@@ -17,11 +17,12 @@
       <th th:text = "${column.value}"></th>
     </th:block>
   </tr>
+
+  <!-- TODO #2: Complete the View Jobs By Category Table. -->
+
+  <!-- Feel free to remove or modify this element if necessary. -->
+
   <tr>
-    <!-- TODO #2: Complete the View Jobs By Category Table. -->
-
-    <td></td> <!-- Feel free to remove or modify this element if necessary. -->
-
     <td th:each="category : ${tableChoices}">
       <ul>
         <li th:each="item : ${category.value}">
