Assignment3 - Run Tests

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -27,7 +27,9 @@
     </div>
 </div>
 
-
+<!--
+ 3. Construct a table for each job, with one job field per row.
+-->
 <table th:fragment="allJobs" class="job-listing" th:each="job: ${jobs}">
 
     <tr>
