--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,35 +11,15 @@
   <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
   <!-- TODO #1 - Use a loop to display job results in a table. -->
-  <th:block th:fragment = "jobsDisplayedAsSeparateTables" th:each = "job : ${jobs}">
-    <table class="job-listing">
-      <tr>
-        <td>ID</td>
-        <td th:text="${job.id}"></td>
-      </tr>
-      <tr>
-        <td>Name</td>
-        <td th:text="${job.name}"></td>
-      </tr>
-      <tr>
-        <td>Employer</td>
-        <td th:text="${job.employer}"></td>
-      </tr>
-      <tr>
-        <td>Location</td>
-        <td th:text="${job.location}"></td>
-      </tr>
-      <tr>
-        <td>Position Type</td>
-        <td th:text="${job.positionType}"></td>
-      </tr>
-      <tr>
-        <td>Skill</td>
-        <td th:text="${job.coreCompetency}"></td>
-      </tr>
-    </table>
+  <!--
+  1. In list-jobs.html, create a loop to display each job passed in from the controller.
+     The job data should be presented in tables, with each job in its own table.
+     Be sure to check in ListController to find the variable names available to the template.
+  2. Adding the CSS class "job-listing" to a table provides some nice styling, courtesy of Carly’s work!
+  3. Construct a table for each job, with one job field per row.
+  -->
 
+  <div th:replace="fragments :: allJobs"></div>
 </div>
-
 </body>
 </html>
